# rmcs-auth-db

./: Cargo.toml  README.md  example.env
migrations/: 20230426112054_api.down.sql  20230426112054_api.up.sql  20230426112100_auth.down.sql  20230426112100_auth.up.sql  20230528090740_role.down.sql  20230528090740_role.up.sql  20230528092241_user.down.sql  20230528092241_user.up.sql  20230528094443_token.down.sql  20230528094443_token.up.sql  20240820140628_profile.down.sql  20240820140628_profile.up.sql
src/: lib.rs  main.rs
src/operation/: api.rs  mod.rs  profile.rs  role.rs  token.rs  user.rs
src/schema/: api.rs  auth_role.rs  auth_token.rs  auth_user.rs  mod.rs  profile.rs
src/utility/: mod.rs
tests/: test.rs
