[package]
name = "rmcs-auth-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
sea-query = "0.28.4"
sea-query-binder = { version = "0.3.0", features = ["sqlx-postgres", "with-chrono"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"
rsa = "0.9.2"
pkcs8 = "0.10.2"
spki = "0.7.2"
argon2 = "0.5.0"

[dev-dependencies]
dotenvy = "0.15.7"
