[package]
name = "rmcs-auth-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
sea-query = { version = "0.28.4", features = ["with-uuid"] }
sea-query-binder = { version = "0.3.0", features = ["sqlx-postgres", "with-chrono", "with-uuid"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
uuid ={ version = "1.4.0", features = ["v4"] }
rand = "0.8.5"
argon2 = "0.5.0"

[dev-dependencies]
dotenvy = "0.15.7"
